# email-server

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  sam_template.yaml
.github/workflows/: rust.yml
src/: main.rs  router.rs
src/env/: mod.rs
src/handler/: mod.rs
src/handler/health/: mod.rs
src/handler/send_email/: mod.rs
src/helper/: mod.rs
src/helper/email/: mod.rs
src/helper/get_address/: mod.rs
src/router/: cors.rs  mod.rs
