[package]
name = "email-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
dotenv = "0.15.0"
lambda-web = { version = "0.2.1", features = ["hyper"] }
lettre = "0.10.3"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[package.metadata.lambda.deploy]
memory = 256
timeout = 30
tracing = "active"
role = "arn:aws:iam::095213111338:role/EmailServer"
env_file = ".env"
